# smm

./: .gitignore  AGENTS.md  Cargo.toml  README.md  compose.yml
.cargo/: config.toml
config/: default.toml
docker/grafana/dashboards/: mma.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: mqtt.yml
docker/redis/: redis.conf
grafana/dashboards/: mma.json
grafana/provisioning/datasources/: mqtt.yml
src/: ccxt.rs  common_data_representation.rs  config.rs  data.rs  exchange.rs  lib.rs  main.rs  mqtt.rs  strategy.rs  types.rs  utils.rs
src/common_data_representation/: disruptor.rs  memory_storage.rs  message.rs  mqtt.rs  price_update.rs
src/common_data_representation/memory_storage/: hashmap_storage.rs  redis_storage.rs  ttl_buffer_hashmap_storage.rs
src/common_data_representation/message/: asmm_quote.rs  bbo_update.rs  price_update.rs  trade_update.rs
src/data/storage/backend/: redis.rs
src/data/transception/: mqtt.rs
src/exchange/: dydx.rs  hyperliquid.rs  traits.rs  types.rs
src/exchange/types/: message.rs  portfolio.rs
src/exchange/types/message/: asmm_quote.rs  bbo_update.rs  position_update.rs  trade_update.rs
src/strategy/: avellaneda_stoikov_market_making.rs  common_data_representation.rs  exchange.rs
src/strategy/common_data_representation/: disruptor.rs  price_update.rs
src/strategy/exchange/: hyperliquid.rs  traits.rs
src/types/: message.rs  portfolio.rs
src/types/message/: balance_update.rs  bbo_update.rs  trade_update.rs
tests/: check_deps.rs
