[package]
name = "mma"
version = "0.1.0"
edition = "2024"

[dependencies]
disruptor = "4.3.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = {version = "0.29", features = ["native-tls"]}
futures-util = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = { version = "1", features = ["serde"] }
config = "0.14"
rumqttc = "0.24"